
2012-06-06: Version 0.0.7a
- extend "ConfirmShutdown" with an "ignore user" parameter

2012-06-14: Version 0.0.7b
- refactor connection handling
- waiting for "NameAcquired" before sending signals

2012-06-20: Version 0.0.7c
- call dbus_threads_init_default, since connection shall be used by multiple threads

2012-06-27: Version 0.0.7d
- add NextWakeupTime to Setup interface
- add ManualStart to Shutdown interface

2012-07-04: Version 0.0.7e
- fix value range test in setup.Set for int32
- add support for getting all values from setup.conf
- add support for storing arbitrary values in setup.conf

2012-07-05: Version 0.0.7f
- fix a memory leak in setup.Set
- fix a bug while setting unsupported values in setup.Set

2012-07-12: Version 0.0.8
- fix the dbus main loop

2012-07-24: Version 0.0.8a
- add SetUserInactive to shutdown interface

2012-09-26: Version 0.0.8b
- add List to plugin interface

2012-11-07: Version 0.0.8c
- add vdr-instance-id to destination name

2012-12-16: Version 0.0.8d
- add SwitchChannel to remote interface
- refactoring of message handling, it's now simpler to add new methods
- add channel interface
- add List to channel interface
- add List to recording interface
- add Get and Play to recording interface
- fix handling of variant arguments
- fix return type of setup.Get and setup.List
- add GetVolume/SetVolume to remote interface
- return proper DBus errors on unknown messages

2012-12-16: Version 1
- switch to another version number scheme, after all I do
  nearly "rolling releases"
- started network support
  refactored monitor and dispatcher to work with multiple instances

2013-01-10: Version 2
- add Count and GetFromTo to channel interface
- add some Utf8 handling on channel interface

2013-04-29: Version 10
- add vdr interface for status signals

2013-05-29: Version 11
- complete rewrite, now using GIO/GDBus

2013-07-10: Version 14
- add method "IsReplaying" to status interface

2015-09-30: Version 26
- make compatible with vdr 2.3.1