@@ -5,6 +5,7 @@
 
 #define DBUS_VDR_BUSNAME                  "de.tvdr.vdr"
 #define DBUS_VDR_CHANNEL_INTERFACE        DBUS_VDR_BUSNAME".channel"
+#define DBUS_VDR_DEVICE_INTERFACE         DBUS_VDR_BUSNAME".device"
 #define DBUS_VDR_EPG_INTERFACE            DBUS_VDR_BUSNAME".epg"
 #define DBUS_VDR_OSD_INTERFACE            DBUS_VDR_BUSNAME".osd"
 #define DBUS_VDR_PLUGIN_INTERFACE         DBUS_VDR_BUSNAME".plugin"
